CPG-DEV/src/objects/AccountPlan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Country Account Group, Sold To</value>
            </filterItems>
            <filterItems>
                <field>Account.Is_Universal__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field is created as a part of Cargill Leap Project</description>
        <label>Business</label>
        <referenceTo>BusinessDetail__c</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <globalPicklist>CargillBusiness</globalPicklist>
        <label>Business</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContributionMargin__c</fullName>
        <label>Contribution Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Profile</label>
        <referenceTo>CustomerProfile__c</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>2017</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsOriginal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOriginal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketShare__c</fullName>
        <label>Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <picklist>
            <picklistValues>
                <fullName>2017</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Product Family</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordNumber__c</fullName>
        <description>This is created for task 154</description>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StrategicPriorities__c</fullName>
        <label>Strategic Priorities</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitofMeasure2__c</fullName>
        <description>IDCTask-0000000145, referencing UNIT of Measure(combined)</description>
        <globalPicklist>Unit_of_Measure_Combined</globalPicklist>
        <label>Unit of Measure</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VolumeActuals__c</fullName>
        <label>Volume Actuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RestrictAccountPlanCreationOnAccRecType</fullName>
        <active>true</active>
        <description>Account Plan can only be created when related account record type is &quot;Prospect or Global Account or Country Account Group or Sold To&quot;.</description>
        <errorConditionFormula>AND( Account__r.RecordType.Name &lt;&gt; &apos;Global Account&apos;, Account__r.RecordType.Name &lt;&gt; &apos;Prospect&apos;, Account__r.RecordType.Name &lt;&gt; &apos;Country Account Group&apos;, Account__r.RecordType.Name &lt;&gt; &apos;Sold To&apos;)</errorConditionFormula>
        <errorMessage>Account Plan can only be created if the related account record type is &quot;Prospect or Global Account or Country Account Group or Sold To&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RestrictAccountPlanNameUpdate</fullName>
        <active>true</active>
        <description>Account Plan Name cannot be updated. It can be editable only at the time of creation.</description>
        <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED(Name),
 $Profile.Name  &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Plan Name cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>